# alternaria-vision

./: .gitignore  README-dep.md  README.md  coverage.xml  makefile  pyproject.toml  segmentation_tuning_plan.md
.github/workflows/: ci.yml
app/: app.py
configs/: train_clf.yaml  train_seg.yaml
configs/experiments/: experiment_1_baseline_adamw.yaml  experiment_2_heavy_augmentation.yaml  experiment_3_larger_model.yaml  experiment_4_high_resolution.yaml  experiment_5_best_combo.yaml  experiment_6_data_centric.yaml  experiment_7_data_centric_v3.yaml
data/raw/alternaria/: IMG_0224.HEIC  IMG_0269.HEIC  IMG_0275.HEIC  IMG_0283.HEIC  IMG_0285.HEIC  IMG_0288.HEIC  IMG_0290.HEIC  IMG_0296.HEIC  IMG_0299.HEIC  IMG_0300.HEIC  IMG_0306.HEIC  IMG_0309.HEIC  IMG_0312.HEIC  IMG_0318.HEIC  IMG_0328.HEIC  IMG_0330.HEIC  IMG_0334.HEIC  IMG_0348.HEIC  IMG_0352.HEIC  IMG_0353.HEIC  IMG_0356.HEIC  IMG_0357.HEIC  IMG_0358.HEIC  IMG_0362.HEIC  IMG_0364.HEIC  IMG_0374.HEIC  IMG_0388.HEIC  IMG_0393.HEIC  IMG_0395.HEIC  IMG_0402.HEIC  IMG_0411.HEIC  IMG_0415.HEIC  IMG_0417.HEIC  IMG_0419.HEIC  IMG_0439.HEIC  IMG_0443.HEIC  IMG_0445.HEIC  IMG_0447.HEIC  IMG_0451.HEIC  IMG_0454.HEIC  (+524 more)
src/data/: advanced_augment.py  augmentations.py  dataset.py
src/evaluation/: evaluate.py  metrics.py
src/models/: classifier.py  segmenter.py
src/training/: prepare_and_train.py  run_experiments.py  train_clf.py  train_seg.py
src/utils/: converter.py  device.py  logger.py  prepare_data.py  split_data.py
tests/: test_datasets.py  test_model.py
