[project]
name = "alternaria-vision"
version = "0.1.0"
description = "Prototipo de visión artificial para clasificación y segmentación de Alternaria alternata en microscopía"
authors = [
    { name = "Instituto de Estudios del Futuro — Universidad de Boyacá", email = "ief@uniboyaca.edu.co" },
]
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "deep-learning",
    "microscopy",
    "mycology",
    "alternaria",
    "computer-vision",
]

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "timm>=1.0.3",
    "albumentations>=1.4.0",
    "opencv-python>=4.9.0",
    "pillow>=10.3.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "grad-cam>=1.5.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "onnxscript>=0.6.2",
    "ultralytics>=8.4.35",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
mlflow = ["mlflow>=2.13.0"]

[project.scripts]
train-clf = "src.training.train_clf:app"
train-seg = "src.training.train_seg:app"
prepare-data = "src.utils.prepare_data:app"
convert-ann = "src.utils.converter:app"
evaluate = "src.evaluation.evaluate:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── uv: Fuentes de PyTorch con CUDA ─────────────────────────
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
